# codepulse

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_tables.py
backend/app/: db.py  main.py
backend/app/api/: auth.py  reviews.py  snippets.py
backend/app/core/: config.py  deps.py  security.py
backend/app/models/: __init__.py  comment.py  review.py  snippet.py  user.py
backend/app/schemas/: comment.py  review.py  snippet.py  user.py
backend/app/services/: auth.py  snippets.py
backend/tests/: conftest.py  test_auth.py  test_auth_edge_cases.py  test_health.py  test_integration.py  test_schemas.py  test_security.py  test_snippets.py  test_snippets_edge_cases.py
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/e2e/: app.spec.ts  screenshots.spec.ts
frontend/src/: App.tsx  index.css
frontend/src/__tests__/: App.test.tsx
frontend/src/api/: auth.ts  client.ts  reviews.ts  snippets.ts
frontend/src/components/: CodeViewer.tsx  CommentThread.tsx  Navbar.tsx  ProtectedRoute.tsx  ReviewPanel.tsx  SnippetCard.tsx  StatusBadge.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useAuth.ts  useSnippets.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  NewSnippet.tsx  Register.tsx  SnippetDetail.tsx
scripts/: seed.py
(+19 files in other folders)
